Fix button content alignment when flex icon

--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -41,6 +41,7 @@
   &-right {
     display: flex;
     align-items: center;
+    justify-content: center;
   }
 
   &-left {
